# agentMode

./: .env.example  .gitignore  .saasmaker.json  .vercelignore  AUDIT.md  CLAUDE.md  READMe.md  agents.md  cache.py  dockerfile  jobScraper.py  linkedinProfileExtractor.py  linkedinSearch.json  main.py  oldreadme.md  parsedProfile.json  readme.md  reddit.py  render.yaml  requirements.txt  sampleProfile.json
.github/workflows/: reddit-warmup-daily.yml  reddit-warmup-weekly.yml  reddit-warmup.yml
backend/: Dockerfile  README.md  auth.py  cache.py  db.py  env.example  env.production.example  linkedinProfileExtractor.py  llm_api.py  main.py  prompts.json  pyproject.toml  reddit.py  render.yaml
cloudflare/backend/: README.md  package-lock.json  package.json  prompts.json  wrangler.jsonc
cloudflare/backend/src/: index.ts
docs/: cloudflare-migration-plan.md  hetzner-dokploy.md
llm/: api.py
models/: readme.md
models/sdxl/: modal_sdxl.py
models/text2audio/: modal_parler.py  modal_xtts.py  test.py
models/txt2img/: modal_sdxl.py  modal_zimage.py
models/txt2video/: json2video.bash  modal_latte.py
web/: Dockerfile  README.md  env.example  env.production.example  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
web/src/: App.tsx  index.css
web/src/api/: index.py
web/src/app/: layout.tsx  metadata.ts  page.tsx
web/src/app/api/r/[subreddit]/: route.ts
web/src/app/api/research/: route.ts
web/src/app/api/research/subreddit/: route.ts
web/src/app/dashboard/: page.tsx
web/src/app/dashboard/digests/: page.tsx
web/src/app/discover/: DiscoverClient.tsx  loading.tsx  page.tsx
web/src/app/old_research/: page.tsx
web/src/app/r/[subreddit]/: SubredditClient.tsx  SubredditLoadingShell.tsx  loading.tsx  page.tsx
web/src/app/r/[subreddit]/[period]/: loading.tsx  (+1 more)
web/src/components/: AuthButton.tsx  DataTree.tsx  JsonViewer.tsx  RedditThreads.tsx  ResearchForm.tsx  SubredditForm.tsx  SubredditHeader.tsx  ThemeToggle.tsx  TrackButton.tsx  theme-provider.tsx
web/src/hooks/: use-form-handler.ts  use-toast.ts
web/src/lib/: api-utils.ts  auth.ts
web/src/pages/: Index.tsx  SubredditResearch.tsx
web/src/services/: api.ts
web/tests/: example.spec.ts
