[tool.poetry]
name = "agentdata-backend"
version = "0.1.0"
description = "FastAPI backend for AgentData"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.104.0"
uvicorn = { version = "^0.24.0", extras = ["standard"] }
python-dotenv = "^1.0.0"
pydantic = ">=2.0.0"
openai = "*"
asyncpraw = "^7.8.1"
praw = "^7.8.1"
requests = "^2.32.0"
httpx = "^0.28.0"
aiofiles = "^24.1.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
tldextract = "^5.1.0"
markdownify = "^0.13.0"
typer = "^0.12.0"
rich = "^13.7.0"
websockets = "^14.0"
tenacity = "^8.2.0"
tls-client = "^1.0.1"
python-jobspy = "^1.1.76"
linkedin-api = "^2.3.1"

[tool.poetry.group.dev.dependencies]
watchfiles = "^1.0.0"
uvloop = "^0.21.0"

[tool.poetry.scripts]
start = "agentdata_backend.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

