
[project]
name = "agentdata-backend"
version = "0.1.0"
description = "FastAPI backend for AgentData"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
  "fastapi>=0.104.0,<0.105.0",
  "uvicorn[standard]>=0.24.0,<0.25.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "pydantic>=2.0.0",
  "openai>=1.50.0,<2.0.0",
  "asyncpraw>=7.8.1,<8.0.0",
  "praw>=7.8.1,<8.0.0",
  "requests>=2.32.0,<3.0.0",
  "httpx>=0.28.0,<0.29.0",
  "aiofiles>=24.1.0,<25.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "lxml>=5.0.0,<6.0.0",
  "pandas>=2.2.0,<3.0.0",
  "numpy>=1.26.0,<2.0.0",
  "tldextract>=5.1.0,<6.0.0",
  "markdownify>=0.13.0,<0.14.0",
  "typer>=0.12.0,<0.13.0",
  "rich>=13.7.0,<14.0.0",
  "websockets>=14.0,<15.0",
  "tenacity>=8.2.0,<9.0.0",
  "tls-client>=1.0.1,<2.0.0",
  "python-jobspy>=1.1.76,<2.0.0",
  "linkedin-api>=2.3.1,<3.0.0",
]

[tool.uv]
dev-dependencies = [
  "watchfiles>=1.0.0,<2.0.0",
  "uvloop>=0.21.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1,<2"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
only-include = ["."]

